src/test/ui/error-codes/E0255.stderr
error[E0255]: the name `foo` is defined multiple times
  --> $DIR/E0255.rs:3:1
   |
LL | use bar::foo;
   |     -------- previous import of the value `foo` here
LL | 
LL | fn foo() {}
   | ^^^^^^^^ `foo` redefined here
   |
   = note: `foo` must be defined only once in the value namespace of this module
help: you can use `as` to change the binding name of the import
   |
LL | use bar::foo as other_foo;
   |     ^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0255`.
